# DocumentSummarizer

./: pyproject.toml
src/documentsummarizer/: __init__.py
